packages/core/test/service/fixtures/invalid_case/case1.fail.ts
export const keys = 'demo'

export default {
  parent: {
    a: 1,
    b: 2
  }
};
